--- a/template-springboot.yaml
+++ b/template-springboot.yaml
@@ -2,14 +2,14 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: springboot-template
-  title: Spring Boot Service
-  description: Create a simple microservice using Spring Boot Java
+  title: Spring Boot gRPC Service
+  description: Create a simple microservice using gRPC and Spring Boot Java
   tags:
     - recommended
     - java
     - spring-boot
 spec:
-  owner: github.com
+  owner: service@example.com
   type: service
 
   parameters:
@@ -57,16 +57,17 @@ spec:
       name: Fetch Skeleton + Template
       action: fetch:template
       input:
-        url: ./content
+        url: ./skeleton
+        copyWithoutRender:
+          - .github/workflows/*
         values:
-         name: ${{ parameters.name }}
-          # component_id: ${{ parameters.component_id }}
-          # description: ${{ parameters.description }}
-          # artifact_id: ${{ parameters.component_id }}
-          # java_package_name: ${{ parameters.java_package_name }}
-          # owner: ${{ parameters.owner }}
-          # destination: ${{ parameters.repoUrl | parseRepoUrl }}
-          # http_port: 8080
+          component_id: ${{ parameters.component_id }}
+          description: ${{ parameters.description }}
+          artifact_id: ${{ parameters.component_id }}
+          java_package_name: ${{ parameters.java_package_name }}
+          owner: ${{ parameters.owner }}
+          destination: ${{ parameters.repoUrl | parseRepoUrl }}
+          http_port: 8080
 
     - id: publish
       name: Publish
